Fix visible rooms CTA on Chios villages

--- a/app/css-split/core.css
+++ b/app/css-split/core.css
@@ -9,3 +9,29 @@
 @import "./components/footer.css";
 @import "./components/language-switcher.css";
 @import "./components/footer-mobile-patch.css";
+
+/* ---- safe global fixes ---- */
+a[href="/chios-rooms/"].bg-white,
+a[href="/el/domatia-xios/"].bg-white,
+a[href="/fr/chambres-chios/"].bg-white,
+a[href="/de/zimmer-chios/"].bg-white,
+a[href="/it/camere-chios/"].bg-white,
+a[href="/es/habitaciones-chios/"].bg-white,
+a[href="/tr/sakiz-odalari/"].bg-white {
+  color: #2f261f !important;
+}
+
+@media (max-width: 767px) {
+  a[href="/chios-rooms/"].bg-white,
+  a[href="/el/domatia-xios/"].bg-white,
+  a[href="/fr/chambres-chios/"].bg-white,
+  a[href="/de/zimmer-chios/"].bg-white,
+  a[href="/it/camere-chios/"].bg-white,
+  a[href="/es/habitaciones-chios/"].bg-white,
+  a[href="/tr/sakiz-odalari/"].bg-white {
+    min-height: 50px !important;
+    padding-inline: 22px !important;
+    color: #2f261f !important;
+    font-weight: 900 !important;
+  }
+}
